test/cli/scenarios_to_cli/other/scenario_validate_default_proc_mount/kyverno-test.yaml
name: validate-default-proc-mount
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: validate-default-proc-mount
  resources:
  - nginx-proc-mount
  result: pass
  rule: validate-default-proc-mount
