test/cli/scenarios_to_cli/other/scenario_validate_default_proc_mount/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-default-proc-mount
spec:
  validationFailureAction: "audit"
  rules:
  - name: validate-default-proc-mount
    match:
      all:
          - resources:
              kinds:
                - Pod
    validate:
      message: "Default proc mount should set to Unmasked"
      pattern:
        spec:
          containers:
          - securityContext:
              procMount: Unmasked
# used by rootless containers
