test/cli/scenarios_to_cli/other/scenario_validate_default_proc_mount/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Unmasked #Default
